fix the menu item 2 image not aligning properly

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -112,16 +112,18 @@ li[data-selected="true"] {
 }
 
 .item-2{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    padding: 5px;
-    
+   
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center
 }
 .img2{
-    grid-column: 1/ 2; 
+    /* grid-column: 1/ 2;  */
+    width: 50%;
 }
 .text2{
     grid-column: 2/ 3;
+    width: 50%;
 }
 .item-3 {
     display: grid;
